--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Redireccionando...</title>
     <script>
-        window.location.href = "https://oasispro.vip/";
+        window.location.href = "ganamos.io";
     </script>
 </head>
 <body>
-    <p>Si no eres redirigido automáticamente, haz clic <a href="https://oasispro.vip/">aquí</a>.</p>
+    <p>Si no eres redirigido automáticamente, haz clic <a href="ganamos.io">aquí</a>.</p>
 </body>
 </html>
